Textsatz verbessert (deutsche Silbentrennung)

--- a/ips/doku/multilat-doku.tex
+++ b/ips/doku/multilat-doku.tex
@@ -10,21 +10,15 @@
 \usepackage[bottom]{footmisc} %% verhindert Gleitobjekte unterhalb von Fußnoten
 
 
-%\usepackage[unicode=true, 
-% bookmarks=true,bookmarksnumbered=false,bookmarksopen=false,
-% breaklinks=true,pdfborder={0 0 1},backref=false,colorlinks=true]{hyperref}
-%\hypersetup{pdftitle={Latex-Test},
-% pdfauthor={Markus Hefele},
-% pdfkeywords={multilat doku},
-% linkcolor=black, citecolor=black, urlcolor=blue, filecolor=blue, 
-% pdfpagelabels,pdftex}
+%\usepackage[unicode=true, bookmarks=true,bookmarksnumbered=false,bookmarksopen=false,breaklinks=true,pdfborder={0 0 1},backref=false,colorlinks=true]{hyperref}
+%\hypersetup{pdftitle={Latex-Test}, pdfauthor={Markus Hefele}, pdfkeywords={multilat doku}, linkcolor=black, citecolor=black, urlcolor=blue, filecolor=blue, pdfpagelabels,pdftex}
 
 \pagestyle{scrheadings}
 
 %\ohead[]{}			%oben links
 %\chead[]{}			%oben mitte
 %\ihead[]{}			%oben rechts
-%\ofoot[]{}	%unten links
+\ofoot[2013]{2013}	%unten links
 %\cfoot[]{}			%unten mitte
 %\ifoot[]{}	%unten rechts
 
